--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -146,6 +146,11 @@
 
                     {% block body %}{% endblock %}
 
+<hr>
+<div id="hello"></div>
+<hr>
+
+
                 </section>
 
                 <div class="columns">
