--- a/assets/css/bolt.css
+++ b/assets/css/bolt.css
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Open Sans', serif;
+    font-family: 'Source Sans Pro', serif;
     font-size: 16px;
     line-height: 1.5;
     height: 100%;
