--- a/assets/css/bolt.css
+++ b/assets/css/bolt.css
@@ -3,7 +3,7 @@ html, body {
     font-size: 16px;
     line-height: 1.5;
     height: 100%;
-    background: #ECF0F3;
+    background: #F8F8F8;
     margin: 0;
   }
 
