--- a/templates/bolt/index.html.twig
+++ b/templates/bolt/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'bolt/base.html.twig' %}
 
 {% block body %}
-    <h1>Hello {{ name }}</h1>
+
     {% dump %}
+
+    <p>Bolt {{ version }}</p>
 {% endblock %}
