--- a/templates/blog/listing.html.twig
+++ b/templates/blog/listing.html.twig
@@ -13,6 +13,7 @@
             <b>Field name:</b>
             {{ field.sortorder }}. {{ field.name }} / {{ field.type }}
         <p>{{ field }}</p>
+            {{ dump(field.definition) }}
         {% endfor %}
         <hr>
     {% endfor %}
