--- a/templates/blog/listing.html.twig
+++ b/templates/blog/listing.html.twig
@@ -17,18 +17,16 @@
                 <span class="metadata"><i class="fa fa-calendar"></i> {{ record.publishedAt|localizeddate('long', 'medium', null, 'UTC') }}</span>
                 <span class="metadata"><i class="fa fa-user"></i> {{ record.author.fullName }}</span>
                 <span class="metadata"><i class="fa fa-cog"></i> {{ record.contenttype }}</span>
+                <span class="metadata"><i class="fa fa-link"></i> {{ record.slug }}</span>
             </p>
-
-            <p><code>{{ record.slug }}</code></p>
-            {#{{ dump(record.definition) }}#}
-            {#{{ dump(record.contenttype) }}#}
+            {{ dump(record.definition) }}
             {% for field in record.fields %}
                 <small>
                    <b>Field name:</b>
                     {{ field.sortorder }}. {{ field.name }} / {{ field.type }}
                 </small>
                 <p>{{ field }}</p>
-                {#{{ dump(field.definition) }}#}
+                {#{{ dump(field) }}#}
             {% endfor %}
 
             {#{{ record.summary }}#}
