--- a/public/theme/skeleton/partials/_recordfooter.twig
+++ b/public/theme/skeleton/partials/_recordfooter.twig
@@ -14,11 +14,11 @@
         <a href="{{ record.link() }}">{{ __('general.phrase.permalink') }}</a> -
         {# include the 'default' links to taxonomies. Check the documentation for ways to modify and customize
            what is output to the browser: https://docs.bolt.cm/contenttypes/taxonomies#displaying-taxonomies-in-templates #}
-        {{ include('_sub_taxonomylinks.twig', { record: record }) }}
+        {#{{ include('_sub_taxonomylinks.twig', { record: record }) }}#}
     </p>
 
-    {% set previous = record.previous('id') %}
-    {% set next = record.next('id') %}
+    {% set previous = false %} {# record.previous('id') #}
+    {% set next = false %} {# record.next('id') #}
     {% if previous or next %}
         <p class="meta">
             {% if previous %}
