Working on images/thumbnails

--- a/public/theme/skeleton/record.twig
+++ b/public/theme/skeleton/record.twig
@@ -4,6 +4,20 @@
 
     <h1>{{ record.title }}</h1>
 
+<hr>
+    {% if record.image %}
+        {{ dump(record.image) }}
+        <p>{{ record.image }}</p>
+        {{ thumbnail(record.image, 400, 260) }}
+<hr>
+        <a href="{{ record.image }}">
+            <img src="{{ thumbnail(record.image, 400, 260) }}">
+            <img src="{{ record.image|thumbnail(400, 260) }}">
+        </a>
+    {% endif %}
+
+    <hr>
+
     {# Output all fields, in the order as defined in the contenttype.
        To change the generated html and configure the options, see:
        https://docs.bolt.cm/templating #}
@@ -14,11 +28,11 @@
     <p>Record:</p>
     <code>{% verbatim %}{{ dump(record.definition) }}{% endverbatim %}</code>
 
-    {{ dump(record.definition) }}
+    {#{{ dump(record.definition) }}#}
 
     <p>Field:</p>
     <code>{% verbatim %}{{ dump(record.image.definition) }}{% endverbatim %}</code>
-    {{ dump(record.image.definition) }}
+    {#{{ dump(record.image.definition) }}#}
 
     {# Uncomment this if you wish to dump the entire record to the client, for debugging purposes.
     {{ dump(record) }}
