--- a/templates/bolt/edit/edit.twig
+++ b/templates/bolt/edit/edit.twig
@@ -1,6 +1,9 @@
 {% extends 'bolt/base.html.twig' %}
 
+{% block title "Dashboard" %}
+
 {% block body %}
-    Hoi
+
+    {{ dump(record) }}
 
 {% endblock %}
