--- a/templates/bolt/dashboard/dashboard.twig
+++ b/templates/bolt/dashboard/dashboard.twig
@@ -2,7 +2,7 @@
 
 {% block container "vuecontent" %}
 
-{% block title "Dashboard" %}
+{% block title "<b>Dashboard</b>" %}
 
 {% block aside %}
     <div class="vue">
