--- a/templates/bolt/base.html.twig
+++ b/templates/bolt/base.html.twig
@@ -27,6 +27,9 @@
 
     <div id="{% block container %}content{% endblock %}">
 
+        {{ include('default/_flash_messages.html.twig') }}
+
+
         {% block body %}
         {% endblock %}
 
