--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -64,3 +64,23 @@ aside {
         color: #444;
     }
 }
+
+
+.clip-overflow {
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: 3ellipsis;
+    max-height: 72px;
+}
+
+.ui.table td {
+    padding: 0.7em 0.4em;
+}
+
+td img {
+    // Get rid of extra space because of the baseline
+    display: block;
+}
