--- a/templates/bolt/content/listing.twig
+++ b/templates/bolt/content/listing.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    <table class="ui striped table">
+    <table class="ui very basic striped table">
         <thead>
         <tr>
             <th>Title / Excerpt</th>
