--- a/templates/bolt/base.html.twig
+++ b/templates/bolt/base.html.twig
@@ -29,6 +29,9 @@
 
         {{ include('default/_flash_messages.html.twig') }}
 
+        <div class="ui form">
+        <textarea>{{ sidebarmenu()|json_encode() }}</textarea>
+        </div>
 
         {% block body %}
         {% endblock %}
