--- a/templates/bolt/users/login.twig
+++ b/templates/bolt/users/login.twig
@@ -9,9 +9,16 @@
 {% block stylesheets %}
     {{ parent() }}
     <style type="text/css">
-        body {
-            background-color: #DADADA;
+        html {
+            background: linear-gradient( rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.4) ), url(https://source.unsplash.com/daily);
+            background-position: center;
+            background-size: cover;
         }
+
+        body {
+            background: transparent;
+        }
+
         body > .grid {
             height: 100%;
         }
@@ -19,7 +26,15 @@
             margin-top: -100px;
         }
         .column {
-            max-width: 450px;
+            max-width: 322px;
+        }
+        .field {
+            text-align: left;
+        }
+        fieldset {
+            border: 0;
+            margin: 0;
+            padding: 0;
         }
     </style>
 {% endblock %}
@@ -30,36 +45,53 @@
 {% endblock %}
 
 {% block main %}
+
     {% if error %}
         <div class="alert alert-danger">
             {{ error.messageKey|trans(error.messageData, 'security') }}
         </div>
     {% endif %}
 
-    <div class="ui middle aligned center aligned grid">
-        <div class="column" style="max-width: 450px;">
-            <form action="{{ path('security_login') }}" method="post" class="ui large form">
-                <fieldset>
-                    <legend><i class="fa fa-lock" aria-hidden="true"></i> {{ 'title.login'|trans }}</legend>
-
-                    <label for="username">{{ 'label.username'|trans }}</label>
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control"/>
-
-                    <label for="password">{{ 'label.password'|trans }}</label>
-                    <input type="password" id="password" name="_password" class="form-control" />
-
-                    <input type="hidden" name="_target_path" value="{{ app.request.get('redirect_to') }}"/>
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
-
-
-
-                    <button type="submit" class="ui button primary">
-                        <i class="fa fa-sign-in" aria-hidden="true"></i> {{ 'action.sign_in'|trans }}
-                    </button>
-                </fieldset>
-            </form>
-        </div>
+<div class="ui middle aligned center aligned grid">
+    <div class="column">
+        <form action="{{ path('security_login') }}" method="post" class="ui form">
+            <fieldset>
+                <div class="ui card raised">
+                    <div class="content">
+                        <div class="header"><i class="fa fa-lock" aria-hidden="true"></i> Bolt &raquo; Login </div>
+                    </div>
+                    <div class="content">
+                        <div class="field">
+                            <label for="username">{{ 'label.username'|trans }}</label>
+                            <input type="text" placeholder="{{ 'label.username'|trans }}" id="username" name="_username"
+                                value="{{ last_username }}" class="form-control" />
+                        </div>
+                        <div class="field">
+                            <label for="password">{{ 'label.password'|trans }}</label>
+                            <input type="password" placeholder="{{ 'label.password'|trans }}" id="password" name="_password"
+                                class="form-control" />
+                        </div>
+                        <div class="field">
+                            <input type="hidden" name="_target_path" value="{{ app.request.get('redirect_to') }}" />
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+                        </div>
+                        <div class="field">
+                            <div class="ui checkbox">
+                                <input tabindex="0" class="hidden" type="checkbox">
+                                <label>Remember me</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <button type="submit" class="ui button primary">
+                            <i class="fas fa-sign-in-alt" aria-hidden="true"></i> {{ 'action.log_in'|trans }}
+                        </button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
     </div>
+</div>
 
 {% endblock %}
 
