--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -3,9 +3,13 @@ html, body {
     font-size: 16px;
     line-height: 1.5;
     height: 100%;
-    background: #F8F8F8;
     margin: 0;
+    padding: 0;
   }
+
+body {
+    background: #F8F8F8;
+}
 
 .wrapper {
     display: grid;
