Working on login

--- a/templates/bolt/security/login.twig
+++ b/templates/bolt/security/login.twig
@@ -54,7 +54,7 @@
 
 <div class="ui middle aligned center aligned grid">
     <div class="column">
-        <form action="{{ path('security_login') }}" method="post" class="ui form">
+        <form action="{{ path('bolt_login') }}" method="post" class="ui form">
             <fieldset>
                 <div class="ui card raised">
                     <div class="content">
