--- a/templates/bolt/content/listing.twig
+++ b/templates/bolt/content/listing.twig
@@ -1,55 +1,20 @@
 {% extends 'bolt/base.html.twig' %}
 
-{% block title '<strong>' ~ 'title.contentlisting'|trans ~ '</strong>' %}
+{% block title %}
+    {% if contenttype %}
+        {{ 'title.contentlisting'|trans }} » <b>{{ contenttype.name }}</b>
+    {% else %}
+        <b>{{ 'title.contentlisting'|trans }}</b>
+    {% endif %}
+{% endblock %}
 
 {% block body_id 'user_edit' %}
 
 {% block body %}
 
-    <table class="ui very basic striped table">
-        <thead>
-        <tr>
-            <th>Title / Excerpt</th>
-            <th style="min-width: 9.5em;">Meta</th>
-            <th>Image</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
+    {{ dump(contenttype) }}
 
-    {% for record in records %}
-            <tr class="top aligned">
-                <td>
-                    <div class="clip-overflow">{{ record.excerpt(300, true) }}</div>
-                </td>
-                <td>
-                    {% set icon = record.definition.icon_one|default('fa-adjust') %}
-                    <i class="fas {{ icon|replace({':': '-' }) }} fa-fw"></i>
-                    {{ record.definition.name }}
-                    {% if not record.definition.singleton %}№ {{ record.id }}{% endif %}
-                    <br>
-                    <i class="fas fa-user fa-fw"></i>
-                    {{ record.author.fullName }}
-                    <br>
-                    <i class="fas fa-circle status-published fa-fw"></i> {{ record.publishedAt|localizeddate('medium', 'none', null, 'UTC') }}<br>
-                    {#<i class="fa fa-align-left fa-fw"></i>#}
-                    {#<a href="{{ path('bolt_edit_record', {'id': record.id}) }}#taxonomy">#}
-                        {#Volgorde: 81#}
-                    {#</a>#}
-                </td>
-                <td><img src="{{ record.image|thumbnail(100, 75) }}" width="100" height="72"></td>
-                <td><a href="{{ path('bolt_edit_record', {'id': record.id}) }}" class="ui button">Edit</a></td>
-            </tr>
-
-    {% endfor %}
-    </tbody>
-    </table>
-
-    {% if records.haveToPaginate %}
-        <div class="navigation text-center">
-            {{ pagerfanta(records, 'semantic_ui_translated', {routeName: 'bolt_contentlisting', routeParams: app.request.query.all}) }}
-        </div>
-    {% endif %}
+    {% include 'bolt/_partials/_content_listing.twig' with {'records': records } %}
 
 {% endblock %}
 
