--- a/templates/bolt/dashboard/dashboard.twig
+++ b/templates/bolt/dashboard/dashboard.twig
@@ -5,6 +5,9 @@
 {% block title "<b>Dashboard</b>" %}
 
 {% block aside %}
+
+        {% include 'bolt/_partials/_widget_weather.twig' %}
+
         <DashboardNews></DashboardNews>
 {% endblock %}
 
